@@ -4,6 +4,7 @@
 bug_141869_a
 bug_141869_b
 bug_379466
+bug_380824
 bug_411739
 bug_419997
 bug_445693
