@@ -1,3 +1,12 @@
+2007-08-13  Stefan Kost  <ensonic@users.sf.net>
+
+	* tests/bugs/docs/tester-sections.txt:
+	* tests/bugs/src/tester.c (bug_379466, bug_380824):
+	* tests/bugs/src/tester.h (test):
+	  New test.
+	* tests/gtkdoctest.sh:
+	  Fix bashism.
+
 2007-08-12  Stefan Kost  <ensonic@users.sf.net>
 
 	* tests/bugs/docs/tester-sections.txt:
